# ChartPlotterProject

./: CMakeLists.txt
ChartPlugin/: CMakeLists.txt  ChartBackend.cpp  ChartBackend.h  ChartPlugin.cpp
ChartPlugin/core/: IDataProcessor.h  LttbAlgorithm.cpp  LttbAlgorithm.h  OfflineDataProcessor.cpp  OfflineDataProcessor.h  OnlineDataProcessor.cpp  OnlineDataProcessor.h  SdfChartItem.cpp  SdfChartItem.h
ChartPlugin/shaders/: line.frag  line.vert
DemoApp/: CMakeLists.txt  ChartView.qml  main.cpp  main.qml
